<resources>
    <string name="app_name">MANGUP</string>
    <string name="login_title">Inicio de Sesión</string>
    <string name="email_hint">Correo Electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="no_account">¿No tienes cuenta? <b>Regístrate</b></string>
</resources>